--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,32 @@
 [package]
 name = "oxide-engine"
 version = "0.1.0"
-aurthors ["Aashish BishowKarma aashishbishowkarma@outlook.com"]
+aurthors =  ["Aashish BishowKarma <aashishbishowkarma@outlook.com>"]
 description = "A backend framework for web applications"
 license = "MIT"
-license-file = "LICENSE"
 readme = "README.md"
 keywords = ["web", "framework", "SSR", "SSG", "CSR", "backend"]
 categories = ["web-programming", "asynchronous", "development-tools"]
-homepage = https://github.com/aashishbishow/OxideEngine.git
-repository = https://github.com/aashishbishow/OxideEngine.git
+homepage = "https://github.com/aashishbishow/OxideEngine.git"
+repository = "https://github.com/aashishbishow/OxideEngine.git"
 edition = "2024"
 
 [dependencies]
 hyper = "1.5.2"
 tokio = "1.43.0"
+openssl = "0.10.68"
 clap = "4.5.27"
 sqlx = "0.8.3"
 tower = "0.5.2"
 serde = "1.0.217"
-serde_jason = "1.0.137"
+serde_json = "1.0.137"
 tera = "1.20.0"
 dotenvy = "0.15.7"
 reqwest = "0.12.12"
 jwts = "0.5.1"
 tokio-tungstenite = "0.26.1"
 routerify = "3.0.0"
-gloo " 0.11.0"
+gloo = "0.11.0"
 governor = "0.8.0"
 tracing = "0.1.41"
 prometheus = "0.13.4"
